--- a/index.html
+++ b/index.html
@@ -18,5 +18,9 @@
             <li><a href="#">Contact</a></li>
         </ul>
     </nav>
+    <div class="intro">
+        <h1>Hi, I'm Shikto</h1>
+        <h3>I'm a Developer/Programmer</h3>
+    </div>
 </body>
 </html>
