--- a/index.html
+++ b/index.html
@@ -4,23 +4,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <title>SH1KTO</title>
 </head>
 <body>
-    <nav>
-        <label class="logo">SH1KTO</label>
-        <ul>
-            <li><a href="https://sh1kto.github.io/aboutme/" class="active">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Education</a></li>
-            <li><a href="#">Contact</a></li>
-        </ul>
-    </nav>
+    <header class="header">
+        <nav class="navbar">
+            <label class="logo">SH1KTO</label>
+            <ul>
+                <li><a href="https://sh1kto.github.io/aboutme/" class="active">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Services</a></li>
+                <li><a href="#">Education</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <section class="home" id="home">
+        <div class="home-content">
+            <h1>Hi, I'm Shikto</h1>
+            <h3>I'm a Developer/Programmer</h3>
+            <p>I’m a versatile Software Developer specializing in web solutions and data structures. I’m constantly learning to stay at the forefront of technology. When I'm not coding, I enjoy making YouTube videos to share my knowledge.            </p>
+            <div class="social-icons">
+                <a href="#"><i class='bx bxl-linkedin'></i></a>
+                <a href="#"><i class='bx bxl-github'></i></a>
+                <a href="#"><i class='bx bxl-instagram' ></i></a>
+                <a href="#"><i class='bx bxl-twitter'></i></a>
+            </div>
+            <div class="btn-group">
+                <a href="#" class="btn">Hire</a>
+                <a href="#contact" class="btn">Contact</a>
+            </div>
+        </div>
+    </section>
     <div class="intro">
-        <h1>Hi, I'm Shikto</h1>
-        <h3>I'm a Developer/Programmer</h3>
+        
     </div>
 </body>
 </html>
